--- a/.flowconfig
+++ b/.flowconfig
@@ -22,6 +22,7 @@
 ; Ignore misbehaving dev-dependencies
 .*/node_modules/xdl/build/*
 .*/node_modules/reqwest/tests/*
+.*/node_modules/findup/test/*
 
 ; Ignore missing expo-sdk dependencies (temporarily)
 ; https://github.com/expo/expo/issues/162
