--- a/package.json
+++ b/package.json
@@ -27,7 +27,11 @@
   "dependencies": {
     "expo": "^19.0.0",
     "firebase": "^4.2.0",
+    "moment": "^2.18.1",
     "react": "16.0.0-alpha.12",
-    "react-native": "^0.46.1"
+    "react-native": "^0.46.1",
+    "react-navigation": "^1.0.0-beta.11",
+    "react-redux": "^5.0.6",
+    "redux-thunk": "^2.2.0"
   }
 }
