--- a/package.json
+++ b/package.json
@@ -25,8 +25,8 @@
     "preset": "jest-expo"
   },
   "dependencies": {
+    "contentful": "^4.6.1",
     "expo": "^19.0.0",
-    "firebase": "^4.2.0",
     "moment": "^2.18.1",
     "prop-types": "^15.5.10",
     "react": "16.0.0-alpha.12",
