feat: add pages, add cache and database get by field option

--- a/package.json
+++ b/package.json
@@ -11,14 +11,15 @@
   "dependencies": {
     "contentful": "^4.6.1",
     "expo": "^19.0.0",
+    "lodash": "^4.17.4",
     "moment": "^2.18.1",
     "prop-types": "^15.5.10",
+    "react": "16.0.0-alpha.12",
     "react-native": "0.47.2",
     "react-navigation": "^1.0.0-beta.11",
     "react-redux": "^5.0.6",
-    "react": "16.0.0-alpha.12",
-    "redux-thunk": "^2.2.0",
-    "redux": "^3.7.2"
+    "redux": "^3.7.2",
+    "redux-thunk": "^2.2.0"
   },
   "devDependencies": {
     "babel-jest": "20.0.3",
