--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -1,4 +1,25 @@
+buildscript {
+  repositories {
+    maven { url 'https://maven.fabric.io/public' }
+  }
+
+  dependencies {
+    // These docs use an open ended version so that our plugin
+    // can be updated quickly in response to Android tooling updates
+
+    // We recommend changing it to the latest version from our changelog:
+    // https://docs.fabric.io/android/changelog.html#fabric-gradle-plugin
+    classpath 'io.fabric.tools:gradle:1.+'
+  }
+}
+
 apply plugin: "com.android.application"
+
+apply plugin: 'io.fabric'
+
+repositories {
+  maven { url 'https://maven.fabric.io/public' }
+}
 
 import com.android.build.OutputFile
 
@@ -91,16 +112,26 @@ def enableProguardInReleaseBuilds = false
 
 android {
     compileSdkVersion 23
-    buildToolsVersion "23.0.1"
+    buildToolsVersion '25.0.0'
 
     defaultConfig {
-        applicationId "com.mrmapp"
+        applicationId "co.darrenhall.mrmapp"
         minSdkVersion 16
         targetSdkVersion 22
         versionCode 1
-        versionName "1.0"
+        versionName "0.1.0"
         ndk {
             abiFilters "armeabi-v7a", "x86"
+        }
+    }
+    signingConfigs {
+        release {
+            if (project.hasProperty('MRMAPP_RELEASE_STORE_FILE')) {
+                storeFile file(MRMAPP_RELEASE_STORE_FILE)
+                storePassword MRMAPP_RELEASE_STORE_PASSWORD
+                keyAlias MRMAPP_RELEASE_KEY_ALIAS
+                keyPassword MRMAPP_RELEASE_KEY_PASSWORD
+            }
         }
     }
     splits {
@@ -115,6 +146,7 @@ android {
         release {
             minifyEnabled enableProguardInReleaseBuilds
             proguardFiles getDefaultProguardFile("proguard-android.txt"), "proguard-rules.pro"
+            signingConfig signingConfigs.release
         }
     }
     // applicationVariants are e.g. debug, release
@@ -137,6 +169,9 @@ dependencies {
     compile "com.android.support:appcompat-v7:23.0.1"
     compile "com.facebook.react:react-native:+"  // From node_modules,
     compile 'com.facebook.fresco:animated-gif:1.0.1'
+    compile('com.crashlytics.sdk.android:crashlytics:2.7.0@aar') {
+      transitive = true;
+    }
 }
 
 // Run this once to be able to run the application with BUCK
