--- a/package.json
+++ b/package.json
@@ -9,16 +9,16 @@
     "test": "jest"
   },
   "dependencies": {
-    "contentful": "^4.6.1",
-    "expo": "^19.0.0",
+    "contentful": "^5.0.5",
+    "expo": "^23.0.2",
     "lodash": "^4.17.4",
-    "moment": "^2.18.1",
-    "prop-types": "^15.5.10",
-    "react": "16.0.0-alpha.12",
-    "react-native": "0.47.2",
-    "react-native-markdown-renderer": "^2.0.4",
+    "moment": "^2.19.2",
+    "prop-types": "^15.6.0",
+    "react": "16.1.1",
+    "react-native": "0.50",
+    "react-native-markdown-renderer": "^2.0.5",
     "react-native-simple-ptr": "git+https://github.com/frontendbeast/react-native-simple-ptr.git",
-    "react-navigation": "^1.0.0-beta.11",
+    "react-navigation": "^1.0.0-beta.21",
     "react-redux": "^5.0.6",
     "redux": "^3.7.2",
     "redux-thunk": "^2.2.0"
