--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
     "moment": "^2.19.2",
     "prop-types": "^15.6.0",
     "react": "16.1.1",
-    "react-native": "0.50",
+    "react-native": "^0.50",
+    "react-native-fast-image": "^2.0.1",
+    "react-native-fetch-blob": "^0.10.8",
+    "react-native-img-cache": "^1.5.3",
     "react-native-markdown-renderer": "^2.0.5",
     "react-native-simple-ptr": "git+https://github.com/frontendbeast/react-native-simple-ptr.git",
     "react-navigation": "^1.0.0-beta.21",
