--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "16.1.1",
     "react-native": "^0.50",
     "react-native-fetch-blob": "^0.10.8",
+    "react-native-google-analytics-bridge": "^5.6.0",
     "react-native-img-cache": "^1.5.3",
     "react-native-markdown-renderer": "^2.0.5",
     "react-native-simple-ptr": "git+https://github.com/frontendbeast/react-native-simple-ptr.git",
@@ -24,6 +25,7 @@
     "react-navigation": "^1.0.0-beta.21",
     "react-redux": "^5.0.6",
     "redux": "^3.7.2",
+    "redux-beacon": "^1.2.1",
     "redux-thunk": "^2.2.0"
   },
   "devDependencies": {
